# ELEC3210_Project

./: .gitignore  README.md  Report.ipynb  flip_img.ipynb
build_map/: CMakeLists.txt  README.md  package.xml
build_map/launch/: build_map.launch
build_map/rviz/: rviz.rviz
follow_yellow_ball/: CMakeLists.txt  package.xml
follow_yellow_ball/launch/: follow_yellow_ball.launch
follow_yellow_ball/src/: yellow_ball_tracking.cpp
img_detection/: CMakeLists.txt  face_detection_train.cpp  model.xml  package.xml
img_detection/launch/: face_detection.launch
img_detection/src/: face_detection_run.cpp
judge_area/: CMakeLists.txt  package.xml
key_ctrl/: CMakeLists.txt  README.md  package.xml
key_ctrl/launch/: key_control.launch
key_ctrl/scripts/: teleop_twist_keyboard.py
key_ctrl/src/: key_control.cpp
launch/: main.launch
perception/: CMakeLists.txt  package.xml
perception/launch/: perception.launch
perception/src/: perception_run.cpp
report/: Report.html  Report.ipynb  Report.md
